fix: resolve scrollbar issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,7 +56,7 @@ $gray-color: #585858;
 
 html,
 body {
-    overflow-y: hidden;
+    // overflow-y: hidden;
     min-height: 100%;
     margin: 0;
     font-family: 'NeueMontreal';
